# torch2pc-layerwise-thesis

./: .dockerignore  .env.example  .gitattributes  .gitignore  CHANGELOG.md  CHANGELOG_EN.md  CITATION.cff  CODE_OF_CONDUCT.md  CODE_OF_CONDUCT_EN.md  CONTRIBUTING.md  CONTRIBUTING_EN.md  Dockerfile.rocm  FIRST_COMMIT.md  FIRST_COMMIT_EN.md  HYPOTHESES.md  HYPOTHESES_EN.md  LANGUAGE_POLICY.md  LANGUAGE_POLICY_EN.md  LICENSE-DOCS  LICENSE-DOCS_EN  LICENSE_RU.md  Makefile  NOTICE  NOTICE_EN  PACKAGE_MANIFEST.json  PREREGISTRATION.md  PREREGISTRATION_EN.md  PROJECT_STRUCTURE.md  PROJECT_STRUCTURE_EN.md  README.md  README_EN.md  REPOSITORY_VALIDATION_REPORT.json  REPOSITORY_VALIDATION_REPORT.md  REPOSITORY_VALIDATION_REPORT_EN.md  RESEARCH_PRINCIPLES.md  RESEARCH_PRINCIPLES_EN.md  ROADMAP.md  ROADMAP_EN.md  SECURITY.md  SECURITY_EN.md  (+7 more)
article/: README.md  README_EN.md  manuscript_EN.tex  structure.md  structure_EN.md  supplementary_EN.tex
configs/: README.md  README_EN.md  base.yaml
data/: README.md  README_EN.md
docs/: analysis-plan.md  analysis-plan_EN.md  cheap-diagnostic-certificates.md  cheap-diagnostic-certificates_EN.md  data-management.md  data-management_EN.md  ecz-targeted-local-sweep.md  ecz-targeted-local-sweep_EN.md  experiment-protocol.md  experiment-protocol_EN.md  fixedpred-sufficiency-dus-design.md  fixedpred-sufficiency-dus-design_EN.md  fixedpred-sufficiency-dus-metrics.md  fixedpred-sufficiency-dus-metrics_EN.md  fixedpred-sufficiency-dus-refactoring-plan.md  fixedpred-sufficiency-dus-refactoring-plan_EN.md  github-setup.md  github-setup_EN.md  glossary.md  glossary_EN.md  hardware.md  hardware_EN.md  index.md  index_EN.md  language-map.csv  masters-thesis-plan.md  masters-thesis-plan_EN.md  methodology.md  methodology_EN.md  pc-catm-operator-model.md  pc-catm-operator-model_EN.md  pc-multiscale-mechanism-decision-architecture.md  pc-multiscale-mechanism-decision-architecture_EN.md  pc-tref-balanced-core.md  pc-tref-balanced-core_EN.md  pc-tref-pc-catm-theoretical-foundation.md  pc-tref-pc-catm-theoretical-foundation_EN.md  pc-tref-sufficiency-boundary.md  pc-tref-sufficiency-boundary_EN.md  publication-plan.md  (+43 more)
experiments/: README.md  README_EN.md  registry-final-80-completed.csv  registry-final-80-completed.sha256  registry-stage-2.csv  (+2 more)
(+1186 files in other folders)
